[web-app] fix infinite horizontal overflow on feed edit preview

--- a/web-app/src/app/admin/admin-feeds/admin-feed/admin-feed-edit/admin-feed-edit.component.scss
+++ b/web-app/src/app/admin/admin-feeds/admin-feed/admin-feed-edit/admin-feed-edit.component.scss
@@ -15,12 +15,15 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  margin: -8px;
 }
 
 .page-content {
   display: flex;
   flex-direction: row;
+}
+
+.page-content > * {
+  min-width: 0px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -87,8 +90,6 @@
 }
 
 .preview--list {
-  position: absolute;
-  width: 100%;
 }
 
 .mat-list-base {
